fix: corrected layout issues in styles.css

--- a/styless.css
+++ b/styless.css
@@ -76,7 +76,16 @@ body {
   padding: 12px 24px;
 }
 
-#error-message {
+#error-message-first {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: #d73c3c;
+  display: none;
+}
+
+#error-message-last {
   font-size: 12px;
   font-weight: 400;
   line-height: 24px;
